--- a/projects/mainsite/app/styles/event-list.css
+++ b/projects/mainsite/app/styles/event-list.css
@@ -1,18 +1,5 @@
-html {
-  height: 100%;
-}
-
-body {
-/*  background: url("../images/background.jpg") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -ms-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-attachment: fixed;
-  height: 100%;
-*/  
-  /*overflow: hidden;*/
+.page-eventList {
+  overflow: hidden;
 }
 
 .scrollable .scrollable-bar,.scrollable .scrollable-slider {
