--- a/projects/mainsite/app/styles/homepage.css
+++ b/projects/mainsite/app/styles/homepage.css
@@ -3,6 +3,10 @@
 	src: url('./CGFLocustResistance.ttf')format('truetype');
 }
 
+.page-homepage {
+	overflow: hidden;
+}
+
 .home {
 	padding: 0;
 	width: 100%;
