--- a/projects/mainsite/app/styles/login-register.css
+++ b/projects/mainsite/app/styles/login-register.css
@@ -1,12 +1,3 @@
-body {
-/*  overflow-x: hidden; 
-  background: url(background.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-*/  
-  padding-left: 10px;
-}
 #username{
     position: relative;
     top: 25%;
