--- a/projects/mainsite/app/styles/main.css
+++ b/projects/mainsite/app/styles/main.css
@@ -1,5 +1,4 @@
 html {
-  /*overflow: hidden;*/
   margin: 0; 
   padding:0; 
   height:100%; 
@@ -11,14 +10,7 @@ body {
   padding: 0 !important;
 	width: 100%;
 	height: 100%;
-	/*background: url("../images/background.jpg") no-repeat center center;*/
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -ms-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-attachment: fixed;
-  /*overflow-y: hidden;*/
+  overflow: hidden;
 }
 
 /*menu*/
